[project]
name = "heimdallpower-api-client"
version = "0.1.0"
description = "Python SDK for interacting with the Heimdall Power External API"
readme = "README.md"
authors = [
  { name = "Heimdall Power", email = "software-developers@heimdallpower.com" }
]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.24.1,<1.0",
  "pydantic>=2.13.4,<3.0",
  "PyJWT>=2.13.0,<3.0",
  "requests (>=2.34.2,<3.0.0)",
  "attrs (>=25.3.0,<26.0.0)",
  "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[project.urls]
Homepage = "https://developer.heimdallcloud.com"
Documentation = "https://developer.heimdallcloud.com/docs/welcome"
Repository = "https://github.com/heimdallpower/api-sdk"
Changelog = "https://github.com/heimdallpower/api-sdk/releases"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.20"
pytest = "^9.1.1"

[tool.poetry]
packages = [{ include = "heimdall_api_client" }]
exclude = ["examples"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["heimdall_api_client/*_api_client"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modernize syntax for py311+)
]

[tool.ruff.format]
# Inherits line-length and target-version from [tool.ruff]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration (use with '-m integration')"
]
testpaths = ["tests"]